--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Calendar</string>
+    <string name="arrow_left"><![CDATA[<-]]></string>
+    <string name="arrow_right"><![CDATA[->]]></string>
+    <string name="current_date">Apr 2024</string>
 </resources>
